test/typeerrors/Examples/ExprIfCond.hs
module ExprIfCond where

f = if 3 then 4 else 5
